# poetry-lm-experiment

./: .gitignore  DEPLOY_AGENT.md  HANDOFF.md  README.md  pyproject.toml
article/: poetry_lm_experiment_report.html
configs/: benchmark_gigachat3_10b_a1_8b_aabb_lora_bf16.json  benchmark_qwen3_8b_aabb_lora_bf16.json  host_5060_8line_20m.json  host_5060_8line_abab_20m.json  host_5060_aabb_end_planner_12m.json  host_5060_aabb_qf2_stage2_from_fullpoem_20m.json  host_5060_aabb_with_plan_20m.json  host_5060_fullpoem_20m_stage1.json  host_5060_refiner_aabb_20m.json  smoke_aabb_end_planner.json  smoke_aabb_with_plan.json  smoke_cpu.json  smoke_qwen3_0_6b_aabb_qf2_lora.json  smoke_refiner_aabb.json  tiny_cpu.json  vast_8line_20m.json  vast_8line_24m.json  vast_8line_aabb.json  vast_gigachat3_10b_a1_8b_aabb_qf2_lora_bf16.json  vast_main.json  vast_qwen3_8b_aabb_qf2_lora_bf16.json  vast_qwen3_8b_aabb_qf2_qlora.json  vast_refiner_aabb_20m.json  vast_rhyme_focus.json  vast_small.json
deploy/: deploy-prod.sh  model-release.env
scripts/: build_aabb8_dataset.py  build_aabb_plan_datasets.py  build_abab8_dataset.py  build_article.py  build_article_pdf.py  build_dataset.py  build_gigachat_sft_dataset.py  build_qwen_sft_dataset.py  build_rhyme_focus_dataset.py  download_stihi.py  evaluate.py  evaluate_8line.py  evaluate_gigachat_8line.py  evaluate_plan_endings.py  evaluate_planned_8line.py  evaluate_qwen_8line.py  evaluate_refiner_8line.py  filter_aabb8_quality.py  generate.py  generate_gigachat.py  generate_qwen.py  generate_with_plan.py  generate_with_refiner.py  inference_api.py  (+17 more)
(+30 files in other folders)
